$Id$

2004.09.03 [Olivier]
  * in GAction.action_group, do not merge #add_action and
    #add_action_with_accel in a single method because they have
    different behaviour. Fixes a bug where stock items accelerators
    were not connected.

2004.08.27 [Olivier]
  * add GTree.cell_layout#reorder and GTree.cell_layout#set_cell_data_func
  * add a couple of utility functions in Glib
  * decimate ml_gtkmisc.c, add a couple of things to GtkCalendar and GtkLabel

2004.08.24 [Olivier]
  * add GWindow.message_dialog#set_markup (2.4)
  * add override of default signal handlers
    (GtkSignal.override_class_closure, GtkSignal.chain_from_overridden) 

2004.08.23 [Olivier]
  * wrap some 2.4 additions in GdkPixbuf (from_file_at_size,
    save_to_buffer). Add some Ocamldoc comments.
  * add 2.4 stock items in GtkStock

2004.08.20 [Jacques]
  * fix GdkPixbuf.render_to_drawable
  * support gtk-2.0.1
  * add examples/GL/texturesurf.ml with texture from pixbuf

2004.08.19 [Olivier]
  * add 'active' property of ComboBox as a constructor parameter.
  * qualify conversion tables as 'const' (so they end up in read-only
    pages)
  * add some ocamldoc comments

2004.08.11 [Olivier]
  * have GAction.ui_manager#add_ui_from_string raise an exception in
    case of error.
  * add Glib.Markup.Error exception.
  * avoid memory leaks in Glib.Convert.
  * remove some dead code (GtkPreview).

In lablgtk2-20040716 (2.4.0):

2004.07.16 [Jacques]
  * add GLib.Io.remove and Glib.Io.read, works under windows too

2004.07.09 [Olivier]
  * Rewrite Xml_lexer so that it is more conformant.

2004.07.08 [Olivier]
  * fix the support of SVGZ files for older versions of librsvg where
    the header is not always present.

2004.07.05 [Olivier]
  * add ocamldoc comments for some optional parameters.
  * add some optional parameters to the GtkFileFilter constructor.

2004.06.28 [Olivier]
  * support SVGZ files in Rsvg, fix for render_from_file on Win32, fix
    memory leak.

2004.06.22 [Olivier]